Web Site description

--- a/Assignment 1/Assignment 1.html
+++ b/Assignment 1/Assignment 1.html
@@ -9,10 +9,19 @@
 <h2 align="center">Assignment 1: Web Site Description</h2>
 <hr>
 <h3>Purpose of Web Site</h3>
-    <p>The web site will be a personal one. It used as my online portfolio where I will be displaying</p>
+<p>My web site will be a personal one. It will be used as my online portfolio where I will be displaying information
+    about my professional life as well as hobbies and interests. </p>
 <h3>General Description</h3>
+<p>The main aim of my web site is to promote myself, build and control my personal brand. On the professional level,
+    employers will find me more easily and will have more convenience to access my projects. I believe having a personal
+    web site is more dynamic than a simple resume. I
+    want to present who I am my own way and express my real personality. While on the hobbies and interests’ level, a
+    personal web site is the freedom to be creative; I want to inspire people by telling my story, sharing my
+    achievements and memories online. In the long run, I hope to have a small community visiting my web site and having
+    discussion forums.</p>
 <h3>Structure of Web Site</h3>
-<table border="1">
+<p>The following represents a basic layout of my web site:</p>
+<table border="1" align="center" width="50%">
     <tr>
         <th>Signature or Logo</th>
         <th>About</th>
@@ -24,17 +33,95 @@
     <tr>
         <td colspan="3" height="300px" rowspan="2">
             <h2 align="center"> NAME</h2>
-            <p align ="center">-motto- <br> born in mm/dd/yy <br> Title/Occupation <br>Learn more about me</p>
+            <p align="center">-motto- <br> born in mm/dd/yy <br> Title/Occupation <br>Learn more about me</p>
 
         </td>
-        <th colspan="3" height="300px" align="center">photo</th>
+        <th colspan="3" height="300px" align="center"><H2>PORTRAIT PHOTO</H2></th>
     </tr>
     <tr>
         <th colspan="3">Follow me (Social Media links)</th>
     </tr>
-
 </table>
+<p>The major sections of the web site is composed of: </p>
+<ul>
+    <li>
+        <ins>Learn more about me</ins>
+        which covers an introduction about me.
+    </li>
+    <li>
+        <ins>About</ins>
+        which covers the incentive and goal of my web site.
+    </li>
+    <li>
+        <ins>Projects</ins>
+        which displays source codes and links to GitHub repositories.
+    </li>
+    <li>
+        <ins>Q&A section</ins>
+        which is a discussion board among the users and myself.
+    </li>
+    <li>
+        <ins>Media</ins>
+        which features any significant photos or videos.
+    </li>
+    <li>
+        <ins>Contact me</ins>
+        which allows the user to get in touch with me.
+    </li>
+    <li>
+        <ins>Follow me</ins>
+        which allows the user to be kept posted about any updates about me.
+    </li>
+</ul>
 <h3>Sections/Pages Description</h3>
-
+<p>All sections will be linked to another page upon clicking on it.</p>
+<ol>
+    <li><h4>Learn more about me</h4></li>
+    <p>This section will contain information about:
+    <ul>
+        <li>my past and current education</li>
+        <li>work experiences</li>
+        <li>life events</li>
+        <li>summary of my skills</li>
+    </ul>
+    <p> For example, the image below displays information about the summary of my skills:</p>
+    <img src="images/Skills.png" align="center">
+    <li><h4>About</h4></li>
+    <p>Please click the link to display my <a href="About%20Section.html" target="_blank"> about</a> section.</p>
+    <li><h4>Projects</h4></li>
+    <p>This section will directly link to my <a href="https://github.com/chelsieng" target="_blank">GitHub</a> profile.
+    </p>
+    <li><h4>Q&A section</h4></li>
+    <p>This section will be named <em>How can I make your day?</em>. Motivational quotes and thoughts will be posted
+        where anyone can post back or add comments.</p>
+    <li><h4>Media</h4></li>
+    <p>Any highlights of the day or important memories of my life will be featured in this section. For example, photos
+        about a trip, important events or videos about dance performances choreographed by me.</p>
+    <li><h4>Contact me</h4></li>
+    <p>This section will look like the form below:</p>
+    <p align="center">Contact Me</p>
+    <form align="center">
+        <input name="name" placeholder="Name" type="text" required><br/>
+        <input name="email" placeholder="Email" type="email" required><br/>
+        <textarea name="message" placeholder="Message" rows="10" required></textarea>
+        <br>
+        <input type="submit" value="SEND" class="submit"/>
+    </form>
+    <li><h4>Follow me</h4></li>
+    <p>Logos of different social media will be displayed and when the user clicks on it, it will direct them to my
+        social media profile respectively.</p>
+    <p align="center">
+        <a href="https://www.linkedin.com/in/chelsie-ng-6724b5184/" target="_blank"> <img
+                src="https://media-exp1.licdn.com/dms/image/C4E0BAQGBBp0LaObq0A/company-logo_200_200/0?e=1587600000&v=beta&t=T9JdZ2Eec1Ret3nrPAz60os2DbwUROzPOL-Si7zbZYo"
+                height="5%" width="5%" align="center"></a>
+        <a href="https://www.facebook.com/chelsiengmk" target="_blank"><img
+                src="http://pngimg.com/uploads/facebook_logos/facebook_logos_PNG19753.png" height="6%" width="6%"
+                align="center"> </a>
+        <a href="https://www.instagram.com/chel_ng/?fbclid=IwAR1-UliaUgjRBM5opw8mQxbEFAKab31sDe_WeHWw7eddEdsQhlIZqQgQw9s"
+           target="_blank"><img
+                src="https://img.favpng.com/9/25/24/computer-icons-instagram-logo-sticker-png-favpng-LZmXr3KPyVbr8LkxNML458QV3.jpg"
+                width="5%" height="5%" align="center"></a>
+    </p>
+</ol>
 </body>
 </html>
