--- a/Assignment 1/Assignment 1.html
+++ b/Assignment 1/Assignment 1.html
@@ -33,7 +33,7 @@
     <tr>
         <td colspan="3" height="300px" rowspan="2">
             <h2 align="center"> NAME</h2>
-            <p align="center">-motto- <br> born in mm/dd/yy <br> Title/Occupation <br>Learn more about me</p>
+            <p align="center">-motto- <br> born in mm/dd/yy <br> Title/Occupation <br><b>Learn more about me</b></p>
 
         </td>
         <th colspan="3" height="300px" align="center"><H2>PORTRAIT PHOTO</H2></th>
@@ -87,7 +87,7 @@
     <p> For example, the image below displays information about the summary of my skills:</p>
     <img src="images/Skills.png" align="center">
     <li><h4>About</h4></li>
-    <p>Please click the link to display my <a href="About%20Section.html" target="_blank"> about</a> section.</p>
+    <p>Please click on the link to display my <a href="About%20Section.html" target="_blank"> about</a> section.</p>
     <li><h4>Projects</h4></li>
     <p>This section will directly link to my <a href="https://github.com/chelsieng" target="_blank">GitHub</a> profile.
     </p>
