--- a/Assignment 1/Assignment 1.html
+++ b/Assignment 1/Assignment 1.html
@@ -6,21 +6,21 @@
 </head>
 <body>
 <h1 align="center">SOEN287 Web Programming</h1>
-<h2 align="center">Assignment 1: Web Site Description</h2>
+<h2 align="center">Assignment 1: Website Description</h2>
 <hr>
-<h3>Purpose of Web Site</h3>
-<p>My web site will be a personal one. It will be used as my online portfolio where I will be displaying information
+<h3>Purpose of Website</h3>
+<p>My website will be a personal one. It will be used as my online portfolio where I will be displaying information
     about my professional life as well as hobbies and interests. </p>
 <h3>General Description</h3>
-<p>The main aim of my web site is to promote myself, build and control my personal brand. On the professional level,
+<p>The main aim of my website is to promote myself, build and control my personal brand. On the professional level,
     employers will find me more easily and will have more convenience to access my projects. I believe having a personal
-    web site is more dynamic than a simple resume. I
+    website is more dynamic than a simple resume. I
     want to present who I am my own way and express my real personality. While on the hobbies and interests’ level, a
-    personal web site is the freedom to be creative; I want to inspire people by telling my story, sharing my
-    achievements and memories online. In the long run, I hope to have a small community visiting my web site and having
+    personal website is the freedom to be creative; I want to inspire people by telling my story, sharing my
+    achievements and memories online. In the long run, I hope to have a small community visiting my website and having
     discussion forums.</p>
-<h3>Structure of Web Site</h3>
-<p>The following represents a basic layout of my web site:</p>
+<h3>Structure of Website</h3>
+<p>The following represents a basic layout of my website:</p>
 <table border="1" align="center" width="50%">
     <tr>
         <th>Signature or Logo</th>
@@ -42,7 +42,7 @@
         <th colspan="3">Follow me (Social Media links)</th>
     </tr>
 </table>
-<p>The major sections of the web site is composed of: </p>
+<p>The major sections of the website is composed of: </p>
 <ul>
     <li>
         <ins>Learn more about me</ins>
@@ -50,7 +50,7 @@
     </li>
     <li>
         <ins>About</ins>
-        which covers the incentive and goal of my web site.
+        which covers the incentive and goal of my website.
     </li>
     <li>
         <ins>Projects</ins>
