--- a/Assignment 2/Base.html
+++ b/Assignment 2/Base.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>CNMK</title>
-    <!--bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -17,8 +16,10 @@
             crossorigin="anonymous"></script>
     <style>
         body {
-            height: 100%;
-            padding-top: 70px;
+            padding-top: 50px;
+            min-height: 100%;
+            background-image: url("Images/About.jpg");
+            background-size: cover;
         }
 
         .navbar {
@@ -49,60 +50,68 @@
             color: black;
         }
     </style>
-
 </head>
 <body>
-<!--header navigation bar-->
-<nav class="navbar navbar-expand-md fixed-top">
-    <a class="navbar-brand text-align-center " href="Base.html">「 𝐂 𝐇 𝐄 𝐋 𝐒 𝐈 𝐄 」</a> <!-- Add image -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"><img src="Images/Toggler.png"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav nav-fill w-100">
-            <li class="nav-item">
-                <a class="nav-link" href="">HOW CAN I MAKE YOUR DAY?</a> <!-- Add link -->
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="">PROJECTS</a> <!-- Add link -->
-            </li>
-            <li class="nav-item ">
-                <a class="nav-link" href="">MEDIA</a> <!-- Add link -->
-            </li>
-            <li class="nav-item ">
-                <a class="nav-link" href="About.html">ABOUT</a> <!-- Add link -->
-            </li>
-            <li class="nav-item ">
-                <a class="nav-link" href="">CONTACT ME</a> <!-- Add link -->
-            </li>
-        </ul>
-    </div>
-</nav>
-<!--footer navigation bar-->
-<nav class="navbar fixed-bottom navbar-expand-md">
-    <ul class="navbar-nav nav-fill w-100">
-        <li class="nav-item">
-            <a class="nav-link" href="https://www.facebook.com/chelsiengmk" target="_blank"><img
-                    src="Images/Facebook-32.png"></a>
-        </li>
-        <li class="nav-item ">
-            <a class="nav-link"
-               href="https://www.instagram.com/chel_ng/?fbclid=IwAR0Fir7duKbFgQ1Ne8_3P5fm92nplsnySSaMkQZbupffu3iQTr_P_W2HbCg"
-               target="_blank"><img src="Images/Insta-32.png"></a>
-        </li>
-        <li class="nav-item ">
-            <a class="nav-link" href="https://www.linkedin.com/in/chelsie-ng-6724b5184/" target="_blank"><img
-                    src="Images/LinkedIn-32.png"></a>
-        </li>
-        <li class="nav-item ">
-            <a class="nav-link" href="https://www.youtube.com/channel/UCWDwyhsHn5Yr-XiPDfWM4lQ" target="_blank"><img
-                    src="Images/Youtube-32.png"></a>
-        </li>
-        <li class="nav-item ">
-            <a class="nav-link" href="https://www.snapchat.com/add/chel_ng" target="_blank"><img
-                    src="Images/Snapchat-32.png"></a>
-        </li>
-    </ul>
-</nav>
+<div class="header">
+    <nav class="navbar navbar-expand-md fixed-top">
+        <a class="navbar-brand text-align-center " href="Base.html">「 𝐂 𝐇 𝐄 𝐋 𝐒 𝐈 𝐄 」</a> <!-- Add image -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"><img src="Images/Toggler.png"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav nav-fill w-100">
+                <li class="nav-item">
+                    <a class="nav-link" href="">HOW CAN I MAKE YOUR DAY?</a> <!-- Add link -->
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="">PROJECTS</a> <!-- Add link -->
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link" href="">MEDIA</a> <!-- Add link -->
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link" href="About.html">ABOUT</a> <!-- Add link -->
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link" href="">CONTACT ME</a> <!-- Add link -->
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
+<div class="footer">
+    <nav class="navbar fixed-bottom navbar-expand-md">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbarBottom">
+            <span class="navbar-toggler-icon"><img src="Images/follow.png"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbarBottom">
+            <ul class="navbar-nav nav-fill w-100">
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.facebook.com/chelsiengmk" target="_blank"><img
+                            src="Images/Facebook-32.png"></a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link"
+                       href="https://www.instagram.com/chel_ng/?fbclid=IwAR0Fir7duKbFgQ1Ne8_3P5fm92nplsnySSaMkQZbupffu3iQTr_P_W2HbCg"
+                       target="_blank"><img src="Images/Insta-32.png"></a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link" href="https://www.linkedin.com/in/chelsie-ng-6724b5184/"
+                       target="_blank"><img
+                            src="Images/LinkedIn-32.png"></a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link" href="https://www.youtube.com/channel/UCWDwyhsHn5Yr-XiPDfWM4lQ"
+                       target="_blank"><img
+                            src="Images/Youtube-32.png"></a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link" href="https://www.snapchat.com/add/chel_ng" target="_blank"><img
+                            src="Images/Snapchat-32.png"></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
 </body>
 </html>
